# minimal-python-project-boilerplate

./: .pre-commit-config.yaml  README.md  pyproject.toml
